- Added Drop Mortar Shell and Smoke Shell to "Fuzing Munitions" ponder
- Added Drop Mortar Shell, Fluid Shell, and Smoke Shell to Munitions ponder tag
- Added Cannon Loads ponder to Big Cartridge
- Added item tooltips for Smoke Shell
- Added contained fluid tooltip for Fluid Shell item
- Added fuze tooltips for fuzed big cannon munitions
- Added filled Big Cartridge to creative search tab
Removed:
- Removed legacy cannon plume appearance client config, can now only turn plumes on or off in clientside config
Changed:
- Updated Ritchie's Projectile Lib dependency to 2.0.0
 - Improved chunkloading performance
 - Replaced PreciseProjectile interface with tag #ritchiesprojectilelib:precise_motion
- Changed how cannon trails are done
- Separated smoke shell smoke particle (createbigcannons:smoke_shell_smoke) from cannon smoke particle (createbigcannons:cannon_smoke)
 - Both still use the same textures and particle definition by default
- Changed how big cannon plumes look
- Changed description of some ponder categories
Fixed:
- Fixed invalid cannon propellant combinations due to spelling mistake in data pack folder name
- Fixed cannon loader pushing without head
- Fixed lag from cannon being tested during explosion, courtesy of Endalion
- Fixed Disable All Failures config option not disabling squibbing
- Fixed manual autocannons breaking on tick after squib
- Fixed Create Big Cannons projectiles exceeding 10 m/gt (200 m/gt) losing their velocity when loaded

===

0.5.4

"Now, occasionally you're going to get stuck. It's nothing to get upset about. Don't go hurling your controller at the cat, because it might throw something back, and it'll only escalate, and then, well..."
- Stephen Fry, LittleBigPlanet (2008)

Create Big Cannons 0.5.4, with more QoL features and minor fixes.
Now supports Create Fabric 0.5.1.f patch 1.

Added:
- Added ability for some base Create contraptions to load cannons*
 - Mechanical Piston, Gantry, and Rope Pulley