@@ -31,7 +31,8 @@ flywheel_forge_version=0.6.10-105
 
 # Other libraries
 mixinextras_version=0.3.5
-rpl_version=2.0.0-af90207
+rpl_version=2.0.0-dev
+rpl_build=157
 
 # Do not push changes.
 fabric_recipe_viewer=emi
